Bug 51695 - RTL: graph/chart scale cannot be modified, due to number format issue
Summary: RTL: graph/chart scale cannot be modified, due to number format issue
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: Other All
: medium normal
Assignee: Joseph Brown
URL:
Whiteboard: BSA target:3.7.0
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-03 12:23 UTC by Joseph Brown
Modified: 2015-05-03 08:04 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
spreadsheet w/graph (23.04 KB, application/vnd.oasis.opendocument.spreadsheet)
2012-07-03 12:23 UTC, Joseph Brown
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Joseph Brown 2012-07-03 12:23:23 UTC
Created attachment 63779 [details]
spreadsheet w/graph

Problem description: 
Create a line graph, format the y-axis (possibly x-axis also) to a different scale is impossible, because the input number format not accepted.
Steps to reproduce:
1. double click on graph
2. right click on y-axis, choose Format axis, 1st tab (scale) Uncheck automatic for Min/Max and enter 158, 198 respectively
3. modification #'s not accepted, it reports wrong format

Current behavior:
does not accept numbers entered, reports error, though there should be none.  Must select Auto-scaling or not change values

Expected behavior:

Accept changes to numbers and reformat graph

/core/chart2/source/controller/dialogs/tp_Scale.cxx 
appears to have extra code @lines 574-581, I commented these lines then nIndex == 0, where as it was 100 prior.  Don't quite know what these extra lines are/were for but they appear to have been copied from another section.  nIndex should not be set to pPoolItem.GetValue(), that appears to be a nFmt of a different nature than used in Deactivate..

It is possible the format checks could be removed completely, since the format is corrected during entry, prior to deactivation.


Platform (if different from the browser): 
              
Browser: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:13.0) Gecko/20100101 Firefox/13.0.1
Comment 1 Joseph Brown 2012-07-03 23:21:26 UTC
Starting Work
Comment 2 Not Assigned 2012-08-14 14:45:22 UTC
Joseph Brown committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=84a219020ca37a28799972cc60d9286c82ca7511

fdo#51695 Check for Textformat
Comment 3 steve 2015-05-03 08:04:21 UTC
Status is resolved - fixed