fdo#51695 nFmt is not an nIndex

removed code setting nIndex == SID_ATTR_NUMBERFORMAT_VALUE

Change-Id: I823468e8f132937fb937bbf2428c8ad45350ca3c